# embedding_studio

./: .env  .gitignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.local.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  service.Dockerfile  setup.py  worker.fine_tuning.Dockerfile  worker.improvement_worker.Dockerfile  worker.inference.Dockerfile  worker.upsertion_worker.Dockerfile
docs/: challenges.md  index.md  overview.md
docs/embedding_studio/clickstream_storage/: query_retriever.py.md  search_event.py.md  text_query_retriever.py.md
docs/embedding_studio/core/: plugin.py.md
docs/embedding_studio/data_access/: clickstream.py.md  model_stage_tasks.py.md  model_transfer_tasks.py.md
docs/embedding_studio/db/: mongo.py.md
docs/embedding_studio/experiments/: experiments_tracker.py.md  finetuning_iteration.py.md  finetuning_params.py.md  metrics_accumulator.py.md  mlflow_client_wrapper.py.md
docs/embedding_studio/models/: plugin.py.md  reindex.py.md  suggesting.py.md  utils.py.md
docs/embedding_studio/suggesting/: abstract_suggester.py.md  abtract_phrase_manager.py.md  tokenizer.py.md
docs/embedding_studio/tests/: conftest.py.md  test_fine_tuning.py.md  test_ping.py.md
docs/embedding_studio/utils/: datetime_utils.py.md  dramatiq_middlewares.py.md  dramatiq_task_handler.py.md  gpu_monitoring.py.md  initializer_actions.py.md  mlflow_utils.py.md  model_download.py.md  plugin_utils.py.md  redis_utils.py.md  retry.py.md  string_utils.py.md  tasks.py.md
docs/embedding_studio/vectordb/: collection.py.md  collection_base.py.md  collection_info_cache.py.md  vectordb.py.md
docs/overrides/: home.html  main.html
docs/solutions/: semantic_search_engine.md  semi_unstructured_search.md  similarity_search.md
docs/stylesheets/: extra.css
docs/tutorial/: advanced_overview.md  collect_clickstream.md  configure_environment.md  data_source.md  fine_tuning_method.md  fine_tuning_worker.md  getting_started.md  hello_unstructured_world.md  how_to_get_best_model.md  iteration_emulator.md  plugins.md  run_fine_tuning.md
docs/tutorial/data_management/: categories_data_flow.md  clickstream.md  items_data_flow.md  management_api.md
docs/tutorial/fine_tuning/: collect_clickstream.md  configuring.md  data_flow.md  fine_tuning_tracking.md  overview.md
docs/tutorial/getting_started/: architecture_overview.md  configurations.md  core_concepts.md  docker_quickstart.md  introduction.md  model_lifecycle.md
docs/tutorial/improvement/: configuring.md  overview.md
docs/tutorial/payload/: how_to_construct.md  overview.md  usage_for_postgresql.md
docs/tutorial/plugins/: data_sources_integration.md  implement_your_own.md  understanding_plugin_system.md
docs/tutorial/query_parsing/: custom_selector.md  overview.md
docs/tutorial/suggestings/: configuring_redis.md  managing_via_api.md  overview.md
docs/tutorial/vectordb/: configuring.md  integration.md  managing.md
docs/use_cases/: ideal_scenarios.md  legal_firm.md  online_store.md  optimal_moments.md
embedding_studio/: log_config.yaml  main.py  requirements.txt
embedding_studio/api/api_v1/: api.py  internal_api.py  mocked_api.py
embedding_studio/clickstream_storage/: input_with_items.py  query_item.py  query_retriever.py  raw_session.py  search_event.py  text_query_item.py  text_query_retriever.py
embedding_studio/clickstream_storage/converters/: converter.py
embedding_studio/clickstream_storage/parsers/: parser.py  s3_parser.py
embedding_studio/context/: app_context.py
embedding_studio/core/: config.py  plugin.py
embedding_studio/crud/: base.py  fine_tuning.py
embedding_studio/data_access/: clickstream.py  deletion_tasks.py  fine_tuning.py  improvement_sessions.py  inference_deployment.py  inference_deployment_tasks.py  model_stage_tasks.py  model_transfer_tasks.py  reindex_locks.py  reindex_tasks.py  upsertion_tasks.py
embedding_studio/data_access/mongo/: clickstream.py  crud_base.py  mongo_dao.py
embedding_studio/data_storage/loaders/: aggregated_data_loader.py  bucket_file_meta.py  data_loader.py  downloaded_item.py  item_meta.py
embedding_studio/db/: common.py  mongo.py  postgres.py  redis.py
embedding_studio/embeddings/augmentations/: augmentation_interface.py  augmentation_with_random_selection.py  clickstream_augmentation_applier.py  compose.py  items_set_augmentation_applier.py  items_storage_augmentation_applier.py
embedding_studio/experiments/: experiments_tracker.py  finetuning_iteration.py  finetuning_params.py  finetuning_settings.py  metrics_accumulator.py  mlflow_client_wrapper.py  status.py
embedding_studio/models/: delete.py  fine_tuning.py  improvement.py  inference_deployment.py  inference_deployment_tasks.py  items_handler.py  plugin.py  reindex.py  reindex_lock.py  suggesting.py  task.py  upsert.py  utils.py
embedding_studio/schemas/: fine_tuning.py
embedding_studio/suggesting/: abstract_suggester.py  abtract_phrase_manager.py  tokenizer.py
embedding_studio/tests/: conftest.py  test_fine_tuning.py  test_ping.py
embedding_studio/utils/: datetime_utils.py  dot_object.py  dramatiq_middlewares.py  dramatiq_task_handler.py  gpu_monitoring.py  initializer_actions.py  mlflow_utils.py  model_download.py  plugin_utils.py  redis_utils.py  retry.py  string_utils.py  tasks.py
embedding_studio/vectordb/: collection.py  collection_base.py  collection_info_cache.py  exceptions.py  optimization.py  vectordb.py
embedding_studio/worker/: finetune_embedding.py  finetune_embedding_one_param.py
embedding_studio/workers/: fine_tuning.py
examples/: iteration_emulator.py
examples/demo/: clickstream_emulator.py  fine_tuning_emulator.py  iteration_emulator.py
examples/utils/: api_utils.py  aws_utils.py  mlflow_utils.py
plugins/: categories_text_fine_tuning_method.py  default_fine_tuning_method.py  dict_text_fine_tuning_method.py  hugsearch_categories_fine_tuning_method.py  hugsearch_fine_tuning_method.py  text_fine_tuning_method.py
scripts/: format-imports.sh  format.sh  format_all.sh  generate_mkdocs_for_documentation.py  lint.sh
(+431 files in other folders)
